# compiler

./: CMakeLists.txt  DFA.cpp  DFA.h  Identifier.cpp  Identifier.h  InputReader.cpp  InputReader.h  LICENSE  LL1.cpp  LL1.h  NFA.cpp  NFA.h  NFA_Generator.cpp  NFA_Generator.h  Parser.cpp  Parser.h  README.md  RulesReader.cpp  RulesReader.h  SetStates.cpp  SetStates.h  State.cpp  State.h  cfg_input.txt  grammar.txt  grammar2.txt  helper.h  input.txt  input2.txt  main.cpp  minimize.h  minimizedDFA.txt  output.txt  output2.txt  parser_generator.cpp  parser_generator.h  result.txt  test.txt  utility.h
